# document-parser

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
