[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-parser"
version = "0.1.0"
description = "Convert documents to markdown and remove repeated images."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["document", "markdown", "pdf", "images", "converter"]
license = {text = "MIT"}

# Dependencies copied from requirements.txt (pinned versions preserved)
dependencies = [
"docling==2.55.0",
"docling-core==2.48.4",
"Pillow==11.3.0",
"ImageHash==4.3.2",
]

[tool.setuptools]
py-modules = ["app"]

[project.scripts]
document-parser = "app:main"
